# garmin-personal-coach

./: Dockerfile  blueprint.md  garmin_db.md  garmin_planner.md  pyproject.toml  repo_scaffold.md
.github/workflows/: ci.yaml
config/: default.yaml  prod.yaml  staging.yaml  user_goals.yaml
dags/: flows.py
src/: analytics.py  garmin_client.py  llm.py  monitoring.py  planner_interface.py  settings.py  storage.py
tests/: test_flows.py  test_garmin_client.py
